[package]
name = "nonempty"
version = "0.11.0"
description = "Correct by construction non-empty vector"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/cloudhead/nonempty"

[dependencies]
serde = { features = ["derive", "alloc"], default-features = false, optional = true, version = "1" }
arbitrary = { features = ["derive"], optional = true, version = "1" }
bincode = { optional = true, version = "2.0.0-rc.3" }

[features]
default = ["std"]
std = []
serialize = ["dep:serde"]
arbitrary = ["dep:arbitrary"]
bincode2 = ["dep:bincode"]

[dev-dependencies]
serde_json = "1"
